--- a/HTML/index.html
+++ b/HTML/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Sprout</title>
+    <link rel="stylesheet" type="text/css" href="main.css"/>
   </head>
   <body>
     <h1>Mystwood Publishers Ltd.</h1>
